# Kursovaya

./: CMakeLists.txt  Dockerfile  entrypoint.sh  init_database.sql
src/: celestial_body.cpp  celestial_body.h  database.cpp  database.h  game.cpp  game.h  game_database.cpp  game_database.h  game_logic.cpp  game_logic.h  game_states.cpp  game_states.h  game_ui.cpp  game_ui.h  main.cpp  player.cpp  player.h  quiz.cpp  quiz.h  solar_system.cpp  solar_system.h
